tests/fixtures/invalid/array_compound_literal_pointer_difference_different_literals.c
int main(void) {
    return ((int[]){1, 2, 3}) - ((int[]){4, 5, 6});
}
